Issue #3: Добавил заготовки для Реферата, Аннотации, Рецензии, Отзыва.

--- a/MiKTeX/Makefile
+++ b/MiKTeX/Makefile
@@ -1,7 +1,7 @@
 SHELL=%WINDIR%/cmd.exe
 PDFLATEX = pdflatex
 BIBTEX = bibtex
-PDFNAME = diploma_report
+PDFNAME = main_example
 RM = rm -f
 GREP = grep
 
