Removed includepdf command from diploma_report.tex. Moved dropbox publishing to separate target in make file.

--- a/MiKTeX/Makefile
+++ b/MiKTeX/Makefile
@@ -14,7 +14,13 @@ BIBTEX = bibtex
 RM = rm -f
 GREP = grep
 
+
 all: $(DIPLOMA_REPORT_PDF).pdf $(PRACTICE_REPORT_PDF).pdf $(TITLE_PDF).pdf $(TASK_PDF).pdf
+
+
+publish_to_dropbox: all
+	cp $(DIPLOMA_REPORT_PDF).pdf $(DROPBOX_PUBLIC)/$(DIPLOMA_REPORT_PDF).pdf
+	cp $(PRACTICE_REPORT_PDF).pdf $(DROPBOX_PUBLIC)/$(PRACTICE_REPORT_PDF).pdf
 
 $(DIPLOMA_REPORT_PDF).pdf: *.tex
 	$(PDFLATEX) $(DIPLOMA_REPORT_PDF)
@@ -22,7 +28,6 @@ $(DIPLOMA_REPORT_PDF).pdf: *.tex
 	$(PDFLATEX) $(DIPLOMA_REPORT_PDF)
 	$(PDFLATEX) $(DIPLOMA_REPORT_PDF)
 	cp $(DIPLOMA_REPORT_PDF).pdf ../example_diploma.pdf
-	cp $(DIPLOMA_REPORT_PDF).pdf $(DROPBOX_PUBLIC)/$(DIPLOMA_REPORT_PDF).pdf
 
 
 $(PRACTICE_REPORT_PDF).pdf: *.tex
@@ -31,8 +36,6 @@ $(PRACTICE_REPORT_PDF).pdf: *.tex
 	$(PDFLATEX) $(PRACTICE_REPORT_PDF)
 	$(PDFLATEX) $(PRACTICE_REPORT_PDF)
 	cp $(PRACTICE_REPORT_PDF).pdf ../example_practice.pdf
-	cp $(PRACTICE_REPORT_PDF).pdf $(DROPBOX_PUBLIC)/$(PRACTICE_REPORT_PDF).pdf
-
 
 $(TITLE_PDF).pdf: *.tex
 	$(PDFLATEX) $(TITLE_PDF)
