Заготовка для курсового проекта/курсовой работы.
Титульный лист выполнен в соответствии с "ПОЛОЖЕНИЕ ОБ ОРГАНИЗАЦИИ И
ПРОВЕДЕНИИ КУРСОВОГО ПРОЕКТИРОВАНИЯ В БГУИР" от 11.12.2013
http://www.bsuir.by/m/12_100229_1_79807.docx

--- a/MiKTeX/Makefile
+++ b/MiKTeX/Makefile
@@ -8,6 +8,7 @@ endif
 PDFLATEX = pdflatex
 DIPLOMA_REPORT_PDF = diploma_report
 PRACTICE_REPORT_PDF = practice_report
+COURSE_REPORT_PDF = course_report
 TITLE_PDF = diploma_title_only
 TASK_PDF = diploma_task_only
 BIBTEX = bibtex
@@ -37,6 +38,14 @@ $(PRACTICE_REPORT_PDF).pdf: *.tex
 	$(PDFLATEX) $(PRACTICE_REPORT_PDF)
 	cp $(PRACTICE_REPORT_PDF).pdf ../example_practice.pdf
 
+
+$(COURSE_REPORT_PDF).pdf: *.tex
+	$(PDFLATEX) $(COURSE_REPORT_PDF)
+	$(BIBTEX) $(COURSE_REPORT_PDF).aux
+	$(PDFLATEX) $(COURSE_REPORT_PDF)
+	$(PDFLATEX) $(COURSE_REPORT_PDF)
+	cp $(COURSE_REPORT_PDF).pdf ../example_course_project.pdf
+
 $(TITLE_PDF).pdf: *.tex
 	$(PDFLATEX) $(TITLE_PDF)
 	$(BIBTEX) $(TITLE_PDF).aux
@@ -56,5 +65,5 @@ cleanall: clean
 
 .PHONY: clean
 clean:
-	$(RM) *.aux *.log *.out *.toc *.gz *.gz\(busy\) *.blg *.bbl $(DIPLOMA_REPORT_PDF).pdf $(TASK_PDF).pdf $(TITLE_PDF).pdf $(PRACTICE_REPORT_PDF).pdf
+	$(RM) *.aux *.log *.out *.toc *.gz *.gz\(busy\) *.blg *.bbl $(DIPLOMA_REPORT_PDF).pdf $(TASK_PDF).pdf $(TITLE_PDF).pdf $(PRACTICE_REPORT_PDF).pdf $(COURSE_REPORT_PDF).pdf
 
